# vaporslop_tournament

./: .gitignore  Cargo.toml  edit_caddyfile.sh  package-lock.json  package.json  plan-auth.md  plan-matchmaking.md  plan-versioning-followup.md  plan-versioning.md  reload_caddy.sh  state-refactor-plan.md  vaporslop_backup.sh  vaporslop_deploy.sh  vaporslop_setup.sh
assets/: staticeulogy-deepfried.opus  staticeulogy.opus
itch/: index.html
scripts/: generate-cover.cjs
src/: auth.rs  db.rs  main.rs
src/game/: combat.rs  data.rs  defs.rs  defs_embedded.rs  mod.rs  rng.rs  shop.rs  types.rs
static/: index.html  main.js  path-base.js  render.js  style.css
